# pystorex_20250521

./: .gitignore  CHANGELOG.md  CHANGELOG.zh.md  LICENSE  README.md  README.zh.md  __init__.py  actions.py  effects.py  pyproject.toml  setup.cfg  test.ipynb
docs/performance/: performance_report.md  performance_test.py
examples/: detection_example.py  middleware_example.py  nested_selectors_example.py  stress_test.py
examples/counter_example/: counter_actions.py  counter_effects.py  counter_example_backup.py  counter_example_monolithic.py  counter_example_monolithic_v2.py  counter_reducers.py  counter_selectors.py  counter_store.py  main.py
examples/detection_example/: detection_example_backup.py  detection_example_monolithic.py  main.py
examples/detection_example/fence/: __init__.py  fence_actions.py  fence_effects.py  fence_reducer.py  fence_selectors.py
examples/detection_example/helmet/: __init__.py  helmet_actions.py  helmet_effects.py  helmet_reducer.py  helmet_selectors.py
examples/detection_example/shared/: __init__.py  constants.py  detection_actions.py  detection_store.py  utils.py  (+1 more)
examples/ui_example/: index.html  script.js  state-machine.js  styles.css
pystorex/: __init__.py  __init__.pyi  action_handlers.py  actions.py  actions.pyi  effects.py  effects.pyi  entity_actions.py  entity_adapter.py  entity_reducer.py  errors.py  errors.pyi  immutable_utils.py  map_utils.py  middleware.py  middleware.pyi  reducers.py  reducers.pyi  rx_operators.py  store.py  store.pyi  store_selectors.py  store_selectors.pyi  types.py
tests/: test_pystorex_core.py
